@@ -3,6 +3,11 @@ For full details, see the git log at: https://github.com/ksh93/ksh
 
 Any uppercase BUG_* names are modernish shell bug IDs.
 
+2021-11-27:
+
+- A bug that caused the time keyword to override the errexit shell option has
+  been fixed.
+
 2021-11-24:
 
 - The --posix mode was amended to stop the '.' command (but not 'source') from
